# allmygits

./: README.md  pyproject.toml
allmygits/: __init__.py  amg.py
