[tool.poetry]
name = "allmygits"
version = "0.0.2"
description = ""
authors = ["Eric Chen <eric@ericnchen.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
amg = "allmygits:amg.cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
